Changed abstract to be in line with Francois' description

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,8 +1,1 @@
-In this thesis we introduce a geometric language for describing normal
-forms of proofs, which we call atomic flows. We define new normal
-forms for propositional logic proofs in deep inference, of which the
-traditional normal forms are special cases. Using atomic flows we
-provide several normalisation procedures for obtaining the normal
-forms. To our surprise we can 1) normalise proofs without looking at
-their logical connectives or logical rules; and 2) normalise proofs in
-less than exponential time.
+\emph{Atomic flows} are a geometric invariant of classical propositional proofs in deep inference. In this thesis we use atomic flows to describe new normal forms of proofs, of which the traditional normal forms are special cases, we also give several normalisation procedures for obtaining the normal forms. We define, and use to present our results, a new deep-inference formalism called \emph{the functorial calculus}, which is more flexible than the traditional calculus of structures. To our surprise we are able to 1) normalise proofs without looking at their logical connectives or logical rules; and 2) normalise proofs in less than exponential time.
