Rewrote introduction to atomic flows, waiting for Lutz' approval

--- a/atomic_flows.tex
+++ b/atomic_flows.tex
@@ -6,9 +6,11 @@
 
 \Tom{abstract representation}
 
-In this chapter we introduce the main tool used in this thesis, a geometric proof invariant called `atomic flows'. The main contribution is the novel uses of atomic flows. An atomic flow is a directed graph obtained from a derivation by only retaining information about the creation and destruction of atom occurrences. Atomic flows are, essentially, specialised Buss flow graphs \cite{Buss:91:The-Unde:uq,Carb:97:Interpol:fk}. Furthermore, atomic flows are also essentially the same as the kind of proof nets developed in [Str05,Str09], based on work done in [LS05]. The only difference is that these proof nets implement (co)associativity of (co)contraction, while atomic flows do not. For a more detailed comparison see [Str09]. Despite their similarities, the motivation and use of atomic flows differ from that of proof nets.
+In this chapter we introduce the main tool used in this thesis, a geometric proof invariant called `atomic flows'. An atomic flow is a directed graph obtained from a derivation by only retaining information about the creation and destruction of atom occurrences. Notably, the atomic flow of a derivation completely disregards all the logical relations and linear inference rule instances; so, an atomic flow is not a derivation.
 
-Notably, the atomic flow of a derivation completely disregards all the logical relations and associated inference rule instances; so, an atomic flow is not a derivation.
+\Tom{Changed comparison with proof nets (pending Lutz' approval).}
+
+Atomic flows can be seen as either specialised Buss flow graphs \cite{Buss:91:The-Unde:uq,Carb:97:Interpol:fk}, or a variation of the kind of proof nets developed in \cite{Stra:05:From-Dee:yb,Stra:09:From-Dee:fr}, based on work done in \cite{LamaStra:05:Naming-P:ov}. The only difference between atomic flows and these proof nets is that the proof nets implement (co)associativity of (co)contraction and dinaturality of identity and cut, while atomic flows do not. For a more detailed comparison see \cite{Stra:09:From-Dee:fr}. Despite their similarities, the motivation and use of atomic flows differ from that of proof nets.
 
 \Tom{Deleted here all mention of mapping from flows to derivations, as this was missleading in this context. It will be covered in greater detail later instead.}
 
