Avoided non-standard use of \phi_a

--- a/atomic_flows_and_derivations.tex
+++ b/atomic_flows_and_derivations.tex
@@ -225,9 +225,11 @@ Figure~\vref{figure:ExampleAtomicFlows} has three examples of derivations and th
 \end{figure}
 %-----------
 
+\Tom{Avoid non-standard notation ($\phi_a$):}
+
 %--------------------------------------------------
 \begin{definition}\label{definiton:FlowRestriction}
-Given a derivation $\Phi$ with flow $\phi$, and an atom $a$, the \emph{restriction of $\phi$ to $a$}\index{flow!restriction to atom} is the largest subflow $\phi_a$ of $\phi$, such that every edge of $\phi_a$ is mapped to from $a$ or $\bar a$.
+Given a derivation $\Phi$ with flow $\phi$, and an atom $a$, the \emph{restriction of $\phi$ to $a$}\index{flow!restriction to atom} is the largest subflow $\psi$ of $\phi$, such that every edge of $\psi$ is mapped to from $a$ or $\bar a$.
 \end{definition}
 %---------------
 
