Mark the first page with a big DRAFT

--- a/thesis.tex
+++ b/thesis.tex
@@ -16,6 +16,7 @@
 \usepackage[lutzsyntax,noxy]{virginialake}
 \usepackage[pdftex]{graphicx}
 \usepackage[pdftex,dvipsnames,usenames]{color}
+\usepackage[firstpage]{draftwatermark}
 \usepackage[pdfborder={0 0 0}]{hyperref}
 
 %---------------------------------------------------------- REMOVE WHEN FINISHED
