Got Lutz' approval

--- a/atomic_flows.tex
+++ b/atomic_flows.tex
@@ -8,7 +8,7 @@
 
 In this chapter we introduce the main tool used in this thesis, a geometric proof invariant called `atomic flows'. An atomic flow is a directed graph obtained from a derivation by only retaining information about the creation and destruction of atom occurrences. Notably, the atomic flow of a derivation completely disregards all the logical relations and linear inference rule instances; so, an atomic flow is not a derivation.
 
-\Tom{Changed comparison with proof nets (pending Lutz' approval).}
+\Tom{Changed comparison with proof nets (Lutz approves).}
 
 Atomic flows can be seen as either specialised Buss flow graphs \cite{Buss:91:The-Unde:uq,Carb:97:Interpol:fk}, or a variation of the kind of proof nets developed in \cite{Stra:05:From-Dee:yb,Stra:09:From-Dee:fr}, based on work done in \cite{LamaStra:05:Naming-P:ov}. The only difference between atomic flows and these proof nets is that the proof nets implement (co)associativity of (co)contraction and dinaturality of identity and cut, while atomic flows do not. For a more detailed comparison see \cite{Stra:09:From-Dee:fr}. Despite their similarities, the motivation and use of atomic flows differ from that of proof nets.
 
